--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="/uploads/">example</a>.</p>
+    <p>Open a PDF file <a href="/java/uploads/">example</a>.</p>
   </body>
 </html>
